# wasm-grate

./: .npmignore  Cargo.toml  README.md  package.json  pre-install.js  start.js  uninstall.js
src/: main.rs
src/analytics/: analytics.rs  function_body_implementation.rs  mod.rs
src/analytics/report/: mod.rs  report.rs
src/common/: create_config_dir.rs  function_body_interface.rs  function_like.rs  function_like_enum.rs  metrics.rs  mod.rs
src/parsing/: extract_functions.rs  mod.rs  parsing.rs
src/visitor/: cyclomatic_complexity.rs  loop_analysis.rs  max_scores.rs  mod.rs  scoring.rs  string_counter.rs  visitor.rs
src/visitor/report/: report.rs
