[package]
name = "wasm-grate"
version = "0.2.0"
edition = "2021"
description = "Analyzes JS projects for potential WebAssembly migration points."
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.7"
swc_common = "0.33.2"
swc_ecma_ast = "0.110.2"
swc_ecma_parser = "0.141.5"
colored = "2.0.4"

