[package]
name = "wasm-grate"
version = "0.3.2"
edition = "2021"
description = "Analyzes JS projects for potential WebAssembly migration points."
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.8"
swc_common = "0.33.8"
swc_ecma_ast = "0.110.9"
swc_ecma_parser = "0.141.21"
colored = "2.0.4"
swc_ecma_visit = "0.96.9"
dialoguer = "0.11.0"
serde = "1.0.192"
serde_json = "1.0.108"

